[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/SmallMsg.gd" type="Script" id=1]
[ext_resource path="res://Themes/UITheme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=2]
resource_name = "go_up"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -300 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("text/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SmallMsg" type="Node2D"]
script = ExtResource( 1 )

[node name="text" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="text"]
margin_left = -57.0
margin_top = -12.5
margin_right = 3.0
margin_bottom = 1.5
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 2 )
text = "PERFECT!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMove" type="AnimationPlayer" parent="."]
root_node = NodePath("../LabelFade")
playback_speed = 2.0
anims/go_up = SubResource( 2 )

[node name="LabelFade" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/show = SubResource( 1 )

[node name="LabelScale" type="AnimationPlayer" parent="."]

[connection signal="animation_finished" from="LabelFade" to="." method="_on_LabelFade_animation_finished"]
